# genesis-dao-node

./: Cargo.toml  Dockerfile  contracts.sh  docker-compose.yml  hookpoints.json  para-2000-genesis-state  para-2000-wasm  plain-parachain-chainspec.json  raw-parachain-chainspec.json
chain-extensions/pallet-dao-assets/: Cargo.toml
chain-extensions/pallet-dao-assets/src/: lib.rs
commons/: Cargo.toml
commons/src/: lib.rs  traits.rs
commons/src/traits/: mod.rs  pallets.rs
commons/src/types/: assets.rs
contracts/base-genesis-dao/: Cargo.toml  lib.rs
contracts/extensions/dao-assets-contract/: Cargo.toml  lib.rs
contracts/extensions/dao-assets-contract/src/: lib.rs  psp22.rs
contracts/extensions/dao-assets-contract/src/psp22/: errors.rs  mod.rs  traits.rs
contracts/extensions/dao-assets-extension/: Cargo.toml  lib.rs
contracts/extensions/dao-assets-extension/src/: lib.rs  types.rs
contracts/extensions/vote-escrow-contract/: Cargo.toml
contracts/extensions/vote-escrow-contract/src/: lib.rs
contracts/extensions/vote-escrow-extension/: Cargo.toml  lib.rs
contracts/genesis-dao-traits/: Cargo.toml  lib.rs
contracts/hooks/genesis-dao-contract/: Cargo.toml  lib.rs
contracts/hooks/genesis-dao-contract-boilerplate/: Cargo.toml  lib.rs  lib_reference.rs
contracts/hooks/genesis-dao-contract-tests/: Cargo.toml  lib.rs  test_contract.wasm
contracts/hooks/genesis-dao-contract-trait/: Cargo.toml  lib.rs
contracts/hooks/genesis-dao-contract-traits/: Cargo.toml  lib.rs
contracts/plugins/plugins-trait/: Cargo.toml  lib.rs
contracts/plugins/vesting-wallet-contract/: Cargo.toml  lib.rs
contracts/plugins/vote-escrow-contract/: Cargo.toml  lib.rs
node/: Cargo.toml  Cargo.toml.patch
node/para/: Cargo.toml
node/para/src/: chain_spec.rs  command.rs  service.rs
node/solo/: Cargo.toml
node/solo/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
node/src/: benchmarking.rs  chain_spec.rs  command.rs  service.rs
pallets/base_dao_contracts/: Cargo.toml  lib.rs
pallets/dao-assets/: Cargo.toml
pallets/dao-assets/src/: benchmarking.rs  functions.rs  impl_fungibles.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/dao-contract-traits/: Cargo.toml
pallets/dao-contract-traits/src/: lib.rs
pallets/dao-core/: Cargo.toml
pallets/dao-core/src/: benchmarking.rs  functions.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/dao-votes/: Cargo.toml  README.md
pallets/dao-votes/src/: benchmarking.rs  functions.rs  governance_types.rs  hooks.rs  lib.rs  mock.rs  test_utils.rs  tests.rs  types.rs  weights.rs
pallets/hookpoints/: Cargo.toml  README.md  test_contract.wasm
pallets/hookpoints/contract/: Cargo.toml  contract.wasm  lib.rs
pallets/hookpoints/hookpoint-cli/: Cargo.toml  README.md  hookpoints.json
pallets/hookpoints/hookpoint-cli/src/: environment.rs  interactive.rs  main.rs  substrate.rs  utils.rs
pallets/hookpoints/hookpoint-cli/src/builder/: contracts.rs  hooks.rs  mapper.rs  mod.rs
pallets/hookpoints/hookpoint-cli/src/config/: mod.rs  models.rs
pallets/hookpoints/hookpoint-cli/src/environment/: mod.rs
pallets/hookpoints/hookpoint-cli/src/tests/: mod.rs  test_base.rs  test_builder.rs  test_config.rs  test_environment.rs
pallets/hookpoints/macros/: Cargo.toml
pallets/hookpoints/macros/src/: lib.rs
pallets/hookpoints/macros/tests/: test.rs
pallets/hookpoints/src/: benchmarking.rs  builder.rs  functions.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml  Cargo.toml.patch
runtime/local/: Cargo.toml
runtime/local/src/: lib.rs
runtime/para/: Cargo.toml  build.rs
runtime/para/src/: lib.rs
runtime/solo/: Cargo.toml
runtime/solo/src/: lib.rs
runtime/src/: lib.rs
tests/chain-extensions/: Cargo.toml  test_dao_assets_contract.wasm
tests/chain-extensions/src/: lib.rs  mock.rs  tests.rs
tests/chain-extensions/src/tests/: mod.rs  test_assets.rs
tests/contracts/: Cargo.toml
tests/contracts/src/: lib.rs  mock.rs
tests/contracts/src/tests/: mod.rs  test_assets.rs  test_genesis_dao_contract.rs  test_vesting_wallet.rs  test_vote_escrow.rs
tests/contracts/wasm/: test_dao_assets_contract.json  test_dao_assets_contract.wasm  test_genesis_dao_contract.jsom  test_genesis_dao_contract.json  test_genesis_dao_contract.wasm  test_vesting_wallet_contract.json  test_vesting_wallet_contract.wasm  test_vote_escrow_contract.json  test_vote_escrow_contract.wasm
tests/integration-wrapper/: Cargo.toml
