[workspace]
members = [
    "node/solo",
    "runtime/solo",
    "pallets/dao-assets",
    "pallets/dao-core",
    "pallets/dao-votes",
    "commons",
    "contracts/extensions/dao-assets-extension",
    "contracts/extensions/dao-assets-contract",
    "contracts/plugins/vesting-wallet-contract",
    "tests/contracts"
]
resolver = "2"

[profile.release]
panic = "unwind"
