[package]
name = "genesis-dao-contract-traits"
version = "0.1.0"
authors = ["Deep Ink Ventures <alg@deep-ink.ventures>"]
edition = "2021"

[dependencies]
ink = { version = "4.2", default-features = false }
ink_primitives = { version = "4.2", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
	"ink/std",
	"ink_primitives/std",
	"scale/std",
	"scale-info/std",
]
ink-as-dependency = []