[package]
name = "genesis-dao-parachain"
version = "4.0.0-dev"
description = "DAO as a Service"
authors = ["chp <chp@deep-ink.ventures>"]
homepage = "https://deep-ink.ventures"
edition = "2021"
license = "Unlicense"
publish = false
# todo
repository = "https://github.com/shredding/genesis-dao"
build = "build.rs"

[[bin]]
name = "genesis-dao-parachain"


[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
log = "0.4.19"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.171", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
futures = "0.3.28"

# Local
parachain-runtime = { path = "../../runtime/para" }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-network-sync = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", optional = true, branch = "release-v1.0.0-cumulus" }

# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot", features = ["rococo-native"], branch = "release-v1.0.0-cumulus" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v1.0.0-cumulus" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0-cumulus" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5" }
color-print = "0.3.4"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "release-v1.0.0-cumulus" }

[features]
runtime-benchmarks = [
	"parachain-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = [
	"try-runtime-cli/try-runtime",
	"parachain-runtime/try-runtime"
]
