[package]
name = "genesis-dao-solochain"
version = "4.0.0-dev"
description = "DAO as a Service"
authors = ["chp <chp@deep-ink.ventures>"]
homepage = "https://deep-ink.ventures"
edition = "2021"
license = "Unlicense"
publish = false
# todo
repository = "https://github.com/shredding/genesis-dao"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "genesis-dao-solochain"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
serde_json = "1.0.96"

sc-cli = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-telemetry = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-keystore = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sp-consensus-aura = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-consensus-grandpa = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sp-consensus-grandpa = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-offchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sp-runtime = { version = "24.0.0", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sp-io = { version = "23.0.0", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sp-timestamp = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sp-keyring = { version = "24.0.0", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
frame-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
sc-basic-authorship = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }

# Local Dependencies
solochain-runtime = { version = "4.0.0-dev", path = "../../runtime/solo"}

# CLI-specific dependencies
try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "release-v1.0.0-cumulus" }

[features]
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"solochain-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"solochain-runtime/try-runtime", 
	"try-runtime-cli/try-runtime"
]
