[package]
name = "parachain-runtime"
version = "4.0.0-dev"
description = "A parachain node for the genesis dao"
authors = ["chp <chp@deep-ink.ventures>"]
homepage = "https://deep-ink-ventures"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/shredding/genesis-dao"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", optional = true, branch = "release-v1.0.0-cumulus" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.4.1", optional = true }
log = { version = "0.4.19", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
smallvec = "1.11.0"

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "release-v1.0.0-cumulus" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "release-v1.0.0-cumulus" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "release-v1.0.0-cumulus" }
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
pallet-contracts = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
pallet-contracts-primitives = { version = "24.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
pallet-multisig = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
pallet-utility = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "release-v1.0.0-cumulus" }

# Polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0-cumulus" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0-cumulus" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0-cumulus" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0-cumulus" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0-cumulus" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v1.0.0-cumulus" }

# Cumulus
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5", default-features = false }
cumulus-pallet-session-benchmarking = {git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5", default-features = false, version = "3.0.0"}
cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5", default-features = false }
pallet-collator-selection = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus.git", tag = "parachains-v10000-rc5", default-features = false }

pallet-dao-assets = { version = "4.0.0-dev", default-features = false, path = "../../pallets/dao-assets" }
pallet-dao-core = { version = "4.0.0-dev", default-features = false, path = "../../pallets/dao-core" }
pallet-dao-votes = { version = "4.0.0-dev", default-features = false, path = "../../pallets/dao-votes" }
pallet-hookpoints = { version = "4.0.0-dev", default-features = false, path = "../../pallets/hookpoints" }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-collator-selection/std",
	"pallet-multisig/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"pallet-dao-assets/std",
	"pallet-dao-core/std",
	"pallet-dao-votes/std",
	"pallet-hookpoints/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"hex-literal",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"pallet-dao-assets/runtime-benchmarks",
	"pallet-dao-core/runtime-benchmarks",
	"pallet-dao-votes/runtime-benchmarks",
	"pallet-hookpoints/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"pallet-dao-assets/try-runtime",
	"pallet-dao-core/try-runtime",
	"pallet-dao-votes/try-runtime",
	"pallet-hookpoints/try-runtime",
]
